Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body {
 }
 
 .section-hero {
-  padding: 12.8rem 0 9.6rem 0;
+  padding: 9.6rem 0 9.6rem 0;
 }
 
 .hero__text-box {
