--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,6 +1,6 @@
 //**//** HERO SECTION **//**//
 .section-hero {
-  padding: 12.8rem 0 9.6rem 0;
+  padding: 9.6rem 0 9.6rem 0;
 }
 
 .hero {
